--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -17,6 +17,6 @@ services:
     # Helper Twig
     ruian.seo.page.twig:
         class: %ruian.seo.page.twig.class%
-        arguments: [@ruian.seo.page, %ruian.seo.engine%]
+        arguments: [@ruian.seo.page]
         tags:
             - { name: twig.extension }
